# LangAlpha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sandbox  Makefile  README.md  README.zh-CN.md  agent_config.yaml  config.yaml  diff.txt  docker-compose.yml  pyproject.toml
.github/workflows/: sandbox-image.yml  sandbox-integration.yml  test.yml
deploy/: Dockerfile.backend  Dockerfile.dev
docs/api/: README.md
docs/api/35-workspace-files/: download-file.yml  list-files.yml  read-file.yml  upload-file.yml
docs/api/environments/: development.yml
docs/superpowers/specs/: 2026-04-24-tushare-news-financial-design.md
libs/ptc-cli/tests/: conftest.py
mcp_servers/: price_data_mcp_server.py  tushare_price_mcp_server.py  yf_fundamentals_mcp_server.py  yf_market_mcp_server.py  yf_price_mcp_server.py
migrations/versions/: 002_add_vault_secrets.py  003_add_vault_secrets.py  005_add_insight_generating_unique_index.py  009_add_factor_library.py
scripts/: configure.sh  migrate_usages_fk.py  setup_tables.py
scripts/ci/: metrics_comment.py
scripts/migrations/: 013_feedback_and_usages_audit.py
scripts/utils/: test_skill_discovery.py
skills/automation/: SKILL.md
skills/catalyst-calendar/: SKILL.md
skills/check-model/: SKILL.md
skills/dcf-model/: SKILL.md
skills/earnings-preview/: SKILL.md
skills/factor_miner/: SKILL.md
skills/factor_miner/prompts/: distillation.md  mining.md
skills/idea-generation/: SKILL.md
skills/interactive-dashboard/: SKILL.md
skills/interactive-dashboard/references/: chart-patterns.md  ui-components.md
skills/morning-note/: SKILL.md
skills/onboarding/: SKILL.md
skills/secretary/: SKILL.md
skills/web-scraping/: SKILL.md
skills/web-scraping/references/: api-reference.md
src/config/: core.py  env.py  logging_config.py  models.py  settings.py  tool_settings.py  tools.py
src/data_client/: __init__.py  base.py  financial_data_provider.py  market_data_provider.py  news_data_provider.py  registry.py
src/data_client/fmp/: fmp_client.py  news_source.py
src/data_client/ginlix_data/: client.py  mcp_client.py  news_source.py
src/data_client/tushare/: __init__.py  client.py  data_source.py
src/data_client/yfinance/: data_source.py  financial_source.py
src/llms/: api_call.py  llm.py  token_counter.py
src/llms/manifest/: models.json  providers.json
src/ptc_agent/: __init__.py
src/ptc_agent/agent/: __init__.py  agent.py  graph.py
src/ptc_agent/config/: __init__.py  agent.py  core.py  file_utils.py  loaders.py  utils.py
src/ptc_agent/core/: paths.py  sandbox.py  session.py  tool_generator.py
src/server/app/: api_keys.py  calendar.py  insights.py  market_data.py  news.py  portfolio.py  public.py  setup.py  threads.py  users.py  utilities.py  vault.py  workspace_files.py  workspace_sandbox.py
src/server/database/: api_keys.py  automation.py  conversation.py  market_insight.py  portfolio.py  vault_secrets.py
src/server/dependencies/: usage_limits.py
src/server/handlers/: chat_handler.py  checkpoint_handler.py  streaming_handler.py  workflow_handler.py
src/server/models/: additional_context.py  chat.py  conversation.py  market.py  market_data.py  news.py  user.py  workflow.py  workspace.py
src/server/services/: automation_executor.py  background_task_manager.py  insight_service.py  onboarding.py  price_monitor.py  sync_user_data.py  workspace_manager.py
src/server/utils/: multimodal_context.py  secret_redactor.py
src/tools/: crawl.py  decorators.py  fetch.py  search.py
src/tools/automation/: tools.py
src/tools/crawler/: __init__.py  backend.py  crawl4ai_client.py  safe_wrapper.py  scrapling_crawler.py  sitemap.py
src/tools/factor_miner/: __init__.py  implementations.py  tool.py
src/tools/sec/: tool.py
src/tools/secretary/: tools.py  utils.py
src/utils/cache/: redis_cache.py
src/utils/storage/: __init__.py  oss_uploader.py  s3_compatible.py
src/utils/tracking/: core.py  infrastructure_costs.py  per_call_token_tracker.py  session_logger.py  token_tracker.py
tests/: conftest.py
tests/integration/: test_config_api.py
tests/integration/sandbox/: conftest.py  memory_provider.py  test_concurrency.py  test_docker_modes.py  test_error_recovery.py  test_ptc_sandbox_lifecycle.py  test_resource_cleanup.py  test_retry_integration.py  test_runtime_lifecycle.py  test_stress.py
tests/integration/tools/: test_scrapling_docker.py  test_scrapling_integration.py
tests/unit/: test_mcp_price_data.py
tests/unit/config/: test_agent_config.py  test_core_config.py  test_file_utils.py  test_infrastructure_config.py  test_loaders.py  test_sandbox_config.py  test_utils.py
tests/unit/data_client/: test_financial_data_protocol.py  test_market_data_provider.py  test_tushare_data_source.py
tests/unit/integration_infra/: test_metrics_collector.py  test_metrics_reporter.py
tests/unit/llms/: test_input_modalities.py  test_manifest_integrity.py  test_model_config_flatten.py  test_pricing_fallback.py  test_reasoning.py
tests/unit/mcp_servers/: test_yf_fundamentals_mcp.py  test_yf_price_mcp.py
tests/unit/middleware/: test_large_result_eviction.py  test_prompt_cache_breakpoint.py  test_runtime_context.py  test_workspace_context.py
web/: package.json  pnpm-lock.yaml
web/e2e/: chat.spec.js
web/src/: vite-env.d.ts
(+353 files in other folders)
